--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,3 @@
-# Your existing requirements (keeping your versions where applicable)
 airtable-python-wrapper==0.15.3
 amqp==5.1.1
 annotated-types==0.6.0
@@ -9,6 +8,7 @@ async-timeout==4.0.3
 attrs==24.2.0
 beautifulsoup4==4.12.2
 billiard==4.1.0
+Brotli==1.1.0
 cached-property==1.5.2
 cachetools==5.5.0
 celery==5.3.1
@@ -23,7 +23,7 @@ click-plugins==1.1.1
 click-repl==0.3.0
 coinbase-commerce==1.0.1
 colorama==0.4.6
-cron_descriptor==1.4.0
+cron-descriptor==1.4.0
 cryptography==43.0.3
 defusedxml==0.7.1
 dj-database-url==2.3.0
@@ -35,18 +35,25 @@ django-allauth==65.0.2
 django-celery-beat==2.5.0
 django-celery-results==2.5.1
 django-cors-headers==4.1.0
+django-countries==7.5.1
+django-encrypted-fields==1.1.2
+django-encrypted-model-fields==0.6.5
 django-excel-response2==3.0.6
 django-filter==24.3
 django-ordered-model==3.7.4
+django-rest-framework==0.1.0
 django-six==1.0.5
 django-timezone-field==5.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+dlib==19.24.6
 dnspython==2.4.2
 emoji==2.8.0
 excel-base==1.0.4
 exceptiongroup==1.2.2
 exchangelib==5.1.0
+face-recognition==1.3.0
+face-recognition-models==0.3.0
 fake-useragent==2.0.2
 fastapi==0.104.1
 Flask==2.2.2
@@ -76,12 +83,15 @@ MarkupSafe==2.1.1
 mongoengine==0.27.0
 motor==3.3.2
 msgpack==1.1.0
+mutagen==1.47.0
 numpy==2.0.2
 oauth2==1.9.0.post1
 oauthlib==3.2.2
 opencv-python==4.10.0.84
+opencv-python-headless==4.11.0.86
 outcome==1.2.0
 packaging==23.1
+phonenumbers==9.0.1
 Pillow==9.3.0
 pluggy==1.3.0
 prompt-toolkit==3.0.38
@@ -91,6 +101,7 @@ psycopg2-binary==2.9.7
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.21
+pycrypto==2.6.1
 pycryptodomex==3.21.0
 pydantic==2.10.1
 pydantic_core==2.27.1
@@ -100,10 +111,13 @@ pymongo==4.6.0
 pyparsing==3.2.0
 PySocks==1.7.1
 pyspnego==0.10.2
+pytesseract==0.3.13
 pytest==7.4.3
 python-crontab==2.7.1
 python-dateutil==2.8.2
+python-decouple==3.8
 python-dotenv==0.20.0
+python-keyczar==0.716
 python-multipart==0.0.6
 python3-openid==3.2.0
 pytz==2023.3
@@ -146,11 +160,3 @@ Werkzeug==2.2.2
 whitenoise==6.5.0
 wsproto==1.1.0
 xlwt==1.3.0
-
-django-encrypted-fields==1.1.2  # For encrypted fields in User model
-django-countries==7.5.1  # For CountryField in User model
-python-decouple==3.8  # Optional: for env variable management (alternative to python-dotenv)
-# Optional additions (uncomment if desired)
-# pyotp==2.9.0  # Optional: for future TOTP OTP generation
-# django-debug-toolbar==4.3.0  # Optional: for development debugging
-# python-logging==0.4.9.23  # Optional: enhanced logging
