--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -13,8 +13,10 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      - db
-      - redis
+      db:
+        condition: service_healthy 
+      redis:
+        condition: service_started
     restart: unless-stopped
 
   celery:
@@ -25,8 +27,10 @@ services:
     volumes:
       - .:/app
     depends_on:
-      - db
-      - redis
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_started
     restart: unless-stopped
 
   celery-beat:
@@ -37,8 +41,10 @@ services:
     volumes:
       - .:/app
     depends_on:
-      - db
-      - redis
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_started
     restart: unless-stopped
 
   db:
@@ -51,6 +57,11 @@ services:
       - postgres_data:/var/lib/postgresql/data
     ports:
       - "5434:5432"
+    healthcheck:  # Add health check
+      test: ["CMD-SHELL", "pg_isready -U metal_mint_user"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     restart: unless-stopped
 
   redis:
