--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -53,11 +53,10 @@ services:
     image: postgres:13
     environment:
       - POSTGRES_DB=finance_db
-      - POSTGRES_USER=postgres  # Default user for initialization
+      - POSTGRES_USER=finance_user  # Use finance_user directly
       - POSTGRES_PASSWORD=wCh29&HE&T83
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh  # Mount init script
     ports:
       - "5434:5432"
     healthcheck:
