--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,10 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
-    environment:
-      - NEXT_PUBLIC_API_URL=http://web:8000  # Frontend calls backend internally
     depends_on:
       - web
+    environment:
+      - NEXT_PUBLIC_API_URL=http://web:8000
     restart: unless-stopped
 
   web:
@@ -43,6 +43,7 @@ services:
         condition: service_healthy
       redis:
         condition: service_started
+    entrypoint: ""  # Override the web-specific entrypoint
     restart: unless-stopped
 
   celery-beat:
@@ -58,6 +59,7 @@ services:
         condition: service_healthy
       redis:
         condition: service_started
+    entrypoint: ""  # Override the web-specific entrypoint
     restart: unless-stopped
 
   db:
