--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --turbopack",
+		"dev": "next dev --turbo",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^4.1.3",
+		"@radix-ui/react-accordion": "^1.2.4",
 		"@radix-ui/react-avatar": "^1.1.3",
 		"@radix-ui/react-dialog": "^1.1.6",
 		"@radix-ui/react-dropdown-menu": "^2.1.6",
 		"@radix-ui/react-label": "^2.1.2",
 		"@radix-ui/react-popover": "^1.1.6",
+		"@radix-ui/react-progress": "^1.1.3",
 		"@radix-ui/react-select": "^2.1.6",
 		"@radix-ui/react-separator": "^1.1.2",
 		"@radix-ui/react-slider": "^1.2.3",
@@ -27,9 +29,10 @@
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
 		"embla-carousel-react": "^8.5.2",
+		"framer-motion": "^12.6.3",
 		"lightweight-charts": "^4.2.3",
 		"lucide-react": "^0.475.0",
-		"next": "15.0.3",
+		"next": "14.1.0",
 		"react": "19.0.0-rc-66855b96-20241106",
 		"react-day-picker": "^9.6.3",
 		"react-dom": "19.0.0-rc-66855b96-20241106",
