--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --turbo",
+		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint"
@@ -14,7 +14,6 @@
 		"@radix-ui/react-dropdown-menu": "^2.1.6",
 		"@radix-ui/react-label": "^2.1.2",
 		"@radix-ui/react-popover": "^1.1.6",
-		"@radix-ui/react-progress": "^1.1.3",
 		"@radix-ui/react-select": "^2.1.6",
 		"@radix-ui/react-separator": "^1.1.2",
 		"@radix-ui/react-slider": "^1.2.3",
@@ -27,27 +26,30 @@
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
 		"embla-carousel-react": "^8.5.2",
-		"framer-motion": "^12.6.3",
+		"framer-motion": "^12.6.5",
 		"lightweight-charts": "^4.2.3",
 		"lucide-react": "^0.475.0",
-		"next": "14.1.0",
-		"react": "19.0.0-rc-66855b96-20241106",
+		"next": "15.0.3",
+		"react": "^18.2.0",
 		"react-day-picker": "^9.6.3",
-		"react-dom": "19.0.0-rc-66855b96-20241106",
+		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.54.2",
 		"recharts": "^2.15.1",
-		"tailwind-merge": "^3.0.1",
+		"tailwind-merge": "^3.2.0",
 		"tailwindcss-animate": "^1.0.7",
+		"tslib": "^2.8.1",
 		"vaul": "^1.1.2",
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
+		"@next/swc-win32-x64-msvc": "^15.3.0",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
 		"eslint": "^8",
 		"eslint-config-next": "15.0.3",
 		"postcss": "^8",
+		"postcss-js": "^2.0.2",
 		"shadcn-ui": "^0.9.5",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5"
