--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@hookform/resolvers": "^4.1.3",
 		"@radix-ui/react-accordion": "^1.2.4",
+		"@radix-ui/react-avatar": "^1.1.6",
 		"@radix-ui/react-dropdown-menu": "^2.1.6",
 		"@radix-ui/react-label": "^2.1.2",
 		"@radix-ui/react-popover": "^1.1.6",
@@ -42,7 +43,6 @@
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
-		"@next/swc-win32-x64-msvc": "^15.3.0",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
